--- a/sv/index.html
+++ b/sv/index.html
@@ -1,5 +1,6 @@
 ﻿
 
+
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
@@ -120,10 +121,11 @@ font-weight: normal;">
 <center>Czym <b>nie</b> jest Mate Cuboids?</center></h3><p>
 Mate Cuboids nie jest czystym serwerem Vanilla z krwi i kości. Na początku właśnie tym miał być, lecz szybko zrezygnowano z tego ze względu na pewne poważne problemy, m. in. cheaterzy, brak ochrony własności, brak usprawnień w handlu itd.</p>
 <p>
-Mate Cuboids nie jest do końca serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
-<p>Mate Cuboids nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</p>
-
-
+Mate Cuboids nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
+<p><b>Mate Cuboids nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</b>
+</p>
+<p style="
+padding:50px"></p>
 </div>
 </head>
 
