--- a/sv/index.html
+++ b/sv/index.html
@@ -87,13 +87,14 @@ z-index: 1;">
 
 <div style="
     color: white;
-    position: relative;
+    position: static;
     top: -2%;
     text-shadow: 0px 2px 15px #000000;
     font-family: 'Open Sans', serif;
     margin: 0px;
     width: 80%;
-    left: 10%;
+    left: 0;
+     right: 0;
     z-index: -0.9;
     text-align: center;
   text-justify: inter-word;
@@ -101,31 +102,41 @@ z-index: 1;">
 <center>
    
 <img src="https://i.imgur.com/x0HtnBx.png" style="
+  position: fixed;
+  margin: auto;  
   width: 100%;
   height: auto;
+  padding: 5px;
+
+  left: 0;
+  right: 0;
+
+    z-index: 3;
+ -ms-transform: translate(0%, -30%);
+    transform: translate(0%, -80%);
+          
+
+top: 20%;
    max-width: 500pt;
-  transform: translate(0%, 30%);
   -webkit-animation:hue 15s linear infinite;
-z-index: 1;
- "> </a>
+ ">
 </center>
-<h3 style=" /*position: relative;*/
- height: -100%;
-  text-decoration: none;
-   font-weight: normal;">
-<center>Czym jest Mate Cuboids?</center></h3>
-Mate Cuboids to nowoczesny serwer przenoszący doświadczenie rodem z klasycznych serwerów do gry ze znajomymi/ekipą do publicznej formy oferujący przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, zaawansowany system nawigacji, system aukcji, dedykowane warpy dla graczy, lepsze drogi, trampoliny, niestandardowy generator świata, plugin Slimefun... i inne :)
-<h3 style="
-text-decoration: none;
-font-weight: normal;">
-<center>Czym <b>nie</b> jest Mate Cuboids?</center></h3><p>
-Mate Cuboids nie jest czystym serwerem Vanilla z krwi i kości. Na początku właśnie tym miał być, lecz szybko zrezygnowano z tego ze względu na pewne poważne problemy, m. in. cheaterzy, brak ochrony własności, brak usprawnień w handlu itd.</p>
-<p>
-Mate Cuboids nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
-<p><b>Mate Cuboids nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</b>
-</p>
-<p style="
-padding:50px"></p>
+
+
+
+<div style="padding:50px"></div>
+<div style="
+position: fixed;
+padding-top: 50.25%;">
+  <iframe src="https://dphz.github.io/sv/text/index.html" frameborder="0" allowfullscreen
+    style="
+    position: fixed;
+    top: 18%;
+    left: 0;
+    width: 100%;
+    height: 74%;"></iframe>
+</div>
+<p style="padding:50px"></p>
 </div>
 </head>
 
