--- a/sv/index.html
+++ b/sv/index.html
@@ -1,6 +1,7 @@
 ﻿
 
 
+
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
@@ -128,12 +129,15 @@ top: 20%;
 <div style="
 position: fixed;
 padding-top: 50.25%;">
-  <iframe src="https://dphz.github.io/sv/text/index.html" frameborder="0" allowfullscreen
+
+  <iframe src="https://dphz.github.io/sv/text/index.html" scrolling="yes" frameborder="0" allowfullscreen
     style="
     position: fixed;
     top: 18%;
     left: 0;
+    
     width: 100%;
+    overflow: hidden;
     height: 74%;"></iframe>
 </div>
 <p style="padding:50px"></p>
@@ -156,6 +160,7 @@ padding-top: 50.25%;">
     font-family: 'Minecraft', serif;
    left: 0%;
     right: 0%;
+    
     top: 93%;
     z-index: 3;
  -ms-transform: translate(0%, 0%);
