--- a/sv/text/index.html
+++ b/sv/text/index.html
@@ -9,6 +9,12 @@
 <style>
 
 /* unvisited link */
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 a:link {
     font-size: 90%;
     color: white;
@@ -41,23 +47,6 @@ a:hover {
 </head><body>
 
 
-
-<!--
-<div style="
-   position: absolute;
-   top: 42%;
-   left: 50%;
-   width: 500px;
-   height: 500px;
-   margin-top: -250px;
-   margin-left: -250px;
-    -webkit-animation:hue 15s linear infinite;
-z-index: 1;">
-<a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
-<img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;"> </a>
-</div>
--->
-
 <div style="
     color: white;
     position: relative;
@@ -67,6 +56,7 @@ z-index: 1;">
     margin: 0px;
     width: 80%;
     left: 10%;
+    font-size: 120%;
     z-index: -0.9;
     text-align: center;
   text-justify: inter-word;
