--- a/sv/index.html
+++ b/sv/index.html
@@ -1,17 +1,11 @@
-﻿
-
-
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pl-PL">
 <head>
-
 	<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9G5MhGK.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans"/>
     <link rel="stylesheet" type="text/css" media="screen" href="css/minecraft-webfont.css"/>
+  <!--  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>-->
 <style>
-
-/* unvisited link */
 a:link {
     font-size: 90%;
     color: white;
@@ -24,23 +18,21 @@ a:visited {
     color: white;
     text-decoration: none;
 }
-/* mouse over link */
 a:hover {
     color: grey;
- /*  font-style: italic;*/
     text-decoration: none;
 }
-.center {
+/* zjebana klasa center .center {
     margin: 0;
     position: relative;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    }
-
+} */
 </style>
 
+<!--    GRADIENTY -->
 <div style="
 position: fixed;
 width: 100%;
@@ -51,7 +43,6 @@ z-index: -1;
 background: url(https://i.imgur.com/VzfHysv.jpg) 50% 50% / cover no-repeat scroll padding-box;
 ">
 </div>
-
 <div style="
 position: fixed;
 width: 100%;
@@ -71,19 +62,6 @@ z-index: 2;
 background: linear-gradient(#00000000, #00000099);">
 </div>
 <!--
-<div style="
-   position: absolute;
-   top: 42%;
-   left: 50%;
-   width: 500px;
-   height: 500px;
-   margin-top: -250px;
-   margin-left: -250px;
-    -webkit-animation:hue 15s linear infinite;
-z-index: 1;">
-<a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
-<img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;"> </a>
-</div>
 -->
 
 <div style="
@@ -130,15 +108,15 @@ top: 20%;
 position: fixed;
 padding-top: 50.25%;">
 
-  <iframe src="https://dphz.github.io/sv/text/index.html" scrolling="yes" frameborder="0" allowfullscreen
+  <iframe src="https://dphz.github.io/sv/text/index.html" frameborder="0"
     style="
     position: fixed;
     top: 18%;
-    left: 0;
-    
-    width: 100%;
-    overflow: hidden;
-    height: 74%;"></iframe>
+    left: -10%;
+    width: 120%;
+    height: 74%;
+    ">    	
+    </iframe>
 </div>
 <p style="padding:50px"></p>
 </div>
@@ -153,7 +131,6 @@ padding-top: 50.25%;">
 <div style="
     margin: auto;
     color: white;
-   /*  font-style: italic;*/
     position: fixed;
     font-size: 150%;
     text-shadow: 0 0 5px #000000;
