--- a/sv/text/index.html
+++ b/sv/text/index.html
@@ -69,16 +69,16 @@ a:hover {
  height: -100%;
   text-decoration: none;
    font-weight: normal;">
-<center>Czym jest Mate Cuboids?</center></h3>
-Mate Cuboids to nowoczesny serwer przenoszący doświadczenie rodem z klasycznych serwerów do gry ze znajomymi/ekipą do publicznej formy oferujący przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, zaawansowany system nawigacji, system aukcji, dedykowane warpy dla graczy, lepsze drogi, trampoliny, niestandardowy generator świata, plugin Slimefun... i inne :)
+<center>Czym jest Mate Survival?</center></h3>
+Mate Survival to nowoczesny serwer przenoszący doświadczenie rodem z klasycznych serwerów do gry ze znajomymi/ekipą do publicznej formy oferujący przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, zaawansowany system nawigacji, system aukcji, dedykowane warpy dla graczy, lepsze drogi, trampoliny, niestandardowy generator świata, plugin Slimefun... i inne :)
 <h3 style="
 text-decoration: none;
 font-weight: normal;">
-<center>Czym <b>nie</b> jest Mate Cuboids?</center></h3><p>
-Mate Cuboids nie jest czystym serwerem Vanilla z krwi i kości. Na początku właśnie tym miał być, lecz szybko zrezygnowano z tego ze względu na pewne poważne problemy, m. in. cheaterzy, brak ochrony własności, brak usprawnień w handlu itd.</p>
+<center>Czym <b>nie</b> jest Mate Survival?</center></h3><p>
+Mate Survival nie jest czystym serwerem Vanilla z krwi i kości. Na początku właśnie tym miał być, lecz szybko zrezygnowano z tego ze względu na pewne poważne problemy, m. in. cheaterzy, brak ochrony własności, brak usprawnień w handlu itd.</p>
 <p>
-Mate Cuboids nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
-<p><b>Mate Cuboids nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</b>
+Mate Survival nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
+<p><b>Mate Survival nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</b>
 </p>
 
 </div>
