--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -91,31 +91,7 @@ z-index: 1;">
 <body>
 
 <div class="main">
-<h1> Jak zdobyć VIPa? </h1>
-<h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
-  <p>
-1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi dphz odpowiednią ilość "diaxów" (w treści donacji dopisz "ranga VIP"):
-<ul style="list-style-type:none">
-<li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
-<li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
-<li>- 180, jeżeli chcesz otrzymać rangę na 3 miesiące</li>
-<li>- 300, jeżeli chcesz otrzymać rangę na czas trwania bieżącej edycji ("na zawsze")</li>
-</ul>
-</p><p>
-2.
-Nagrywaj i streamuj z serwera! </p><p>
-Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas trwania edycji.
-</p>
-<p>3. Kup odpowiednią usługę za pomocą serwerowej komendy /sklep:
-<ul style="list-style-type:none">
-<li>- VIP3 (ranga na 3 dni)</li>
-<li>- VIP7 (ranga na 7 dni)</li>
-<li>- VIP30 (ranga na 30 dni)</li>
-<li>- VIP45 (ranga na 45 dni)</li>
-</ul>
-<p>4. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPal lub PaySafeCard, znacznie zwiększasz swoje szanse na otrzymanie rangi VIP. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z managerem serwera.</p>
-<p>Kontakt z managerem - Discord: dphz#9803</p>
-<p style="margin: 64px"></p>
+
 <h1> Co daje ranga VIP? </h1>
 <ul>
 <li>specjalny prefiks na czacie</li>
@@ -129,7 +105,36 @@ Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że m
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
 </ul>
-<p style="color: rgba(255, 220, 25, 0)">:P</p>
+ <p style="margin: 64px"></p>
+<h1> Jak zdobyć VIPa? </h1>
+<h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
+  <p>
+1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi deaphuz odpowiednią ilość "diaxów" (w treści darowizny dopisz "ranga VIP"):
+<ul style="list-style-type:none">
+<li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
+<li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
+<li>- 180, jeżeli chcesz otrzymać rangę na 3 miesiące</li>
+<li>- 300, jeżeli chcesz otrzymać rangę na czas trwania bieżącej edycji ("na zawsze")</li>
+</ul>
+</p>
+<p>
+2.
+Nagrywaj i streamuj z serwera! </p><p>
+Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas, który ustalicie.
+</p>
+<p>
+  3. Kup odpowiednią usługę za pomocą komendy /sklep:
+<ul style="list-style-type:none">
+<li>- VIP3 (ranga na 3 dni)</li>
+<li>- VIP7 (ranga na 7 dni)</li>
+<li>- VIP30 (ranga na 30 dni)</li>
+<li>- VIP45 (ranga na 45 dni)</li>
+</ul>
+</p>
+<p>4. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem.</p>
+<p>Kontakt z HeadAdminem przez Discorda: deaphuz#9803</p>
+
+<p style="margin: 64px"></p>
 <p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
 </div>
 
