--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -14,6 +14,7 @@ height: 100%;
 left: 0px;
 top: 0px;
 z-index: -1;
+  background-color: black;
   background-image: url(https://i.imgur.com/3OicvMK.png);
   background-repeat:repeat;
 ">
@@ -98,7 +99,7 @@ z-index: 1;">
 <li>możliwość formatowania tekstu na czacie</li>
 <li>dostęp do /skull</li>
 <li>dostęp do komendy /near</li>
-<li>znosi opłaty za komendę /lot</li>
+<li>znosi opłaty za komendę /lot (innymi słowy będąc VIPem masz latanie na swoich działkach ZA DARMO i bez limitów ;D)</li>
 <li>dostęp do przenośnego workbencha (/wb)</li>
 <li>dostęp do przenośnego enderchesta (/ec)</li>
 <li>18 sethome zamiast 9</li>
@@ -108,8 +109,14 @@ z-index: 1;">
  <p style="margin: 64px"></p>
 <h1> Jak zdobyć VIPa? </h1>
 <h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
-  <p>
-1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi deaphuz odpowiednią ilość "diaxów" (w treści darowizny dopisz "ranga VIP"):
+<p>
+1. Zgłaszaj bugi serwera!</p>
+<p>
+Jeżeli znalazł(eś/aś) coś, co wygląda jak bug serwera to koniecznie napisz o tym na kanale skargi-bledy na naszym serwerowym Discordzie!<br>
+Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostaniesz nagrodzon(y/a) rangą VIP!
+Warto, bo ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od "wagi" błędu, a znajdując kolejne błędy czasy te się kumulują!
+</p>
+2. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi deaphuz odpowiednią ilość "diaxów" (w treści darowizny dopisz "ranga VIP"):
 <ul style="list-style-type:none">
 <li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
 <li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
@@ -117,13 +124,14 @@ z-index: 1;">
 <li>- 300, jeżeli chcesz otrzymać rangę na czas trwania bieżącej edycji ("na zawsze")</li>
 </ul>
 </p>
+
 <p>
-2.
+3.
 Nagrywaj i streamuj z serwera! </p><p>
 Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas, który ustalicie.
 </p>
 <p>
-  3. Kup odpowiednią usługę za pomocą komendy /sklep:
+  4. Kup odpowiednią usługę za pomocą komendy /sklep:
 <ul style="list-style-type:none">
 <li>- VIP3 (ranga na 3 dni)</li>
 <li>- VIP7 (ranga na 7 dni)</li>
@@ -131,7 +139,7 @@ Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że
 <li>- VIP45 (ranga na 45 dni)</li>
 </ul>
 </p>
-<p>4. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem.</p>
+<p>5. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem.</p>
 <p>Kontakt z HeadAdminem przez Discorda: deaphuz#9803</p>
 
 <p style="margin: 64px"></p>
