--- a/sv/index.html
+++ b/sv/index.html
@@ -148,7 +148,7 @@ padding-top: 50.25%;">
 <a href=https://imgur.com/a/hTNfOV5>screeny</a>  
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
 <a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>regulamin</a>  
-<a href=https://discord.gg/4jDHs2D>discord</a>
+<a href=https://dphz.github.io/sv/discord/>discord</a>
 </div>
 </center>
 </body>
