--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -96,10 +96,10 @@ z-index: 1;">
 <h1> Co daje ranga VIP? </h1>
 <ul>
 <li>specjalny prefiks na czacie</li>
-<li>możliwość formatowania tekstu na czacie</li>
+<li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
 <li>dostęp do /skull</li>
 <li>dostęp do komendy /near</li>
-<li>znosi opłaty za komendę /lot (innymi słowy będąc VIPem masz latanie na swoich działkach ZA DARMO i bez limitów ;D)</li>
+<li>znosi opłaty za komendy: /lot, /lozko, /tpa, /tpaccept, /home</li>
 <li>dostęp do przenośnego workbencha (/wb)</li>
 <li>dostęp do przenośnego enderchesta (/ec)</li>
 <li>18 sethome zamiast 9</li>
