--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -97,11 +97,9 @@ z-index: 1;">
 <ul>
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
-<li>dostęp do /skull</li>
-<li>dostęp do komendy /near</li>
+<li>dostęp do komend: /skull, /near, /suicide</li>
 <li>znosi opłaty za komendy: /lot, /lozko, /tpa, /tpaccept, /home</li>
-<li>dostęp do przenośnego workbencha (/wb)</li>
-<li>dostęp do przenośnego enderchesta (/ec)</li>
+<li>dostęp do przenośnego workbencha (/wb) i enderchesta (/ec)</li>
 <li>18 sethome zamiast 9</li>
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
