--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -1,4 +1,4 @@
-﻿
+
 
 
 <!DOCTYPE html>
@@ -114,31 +114,24 @@ Jeżeli znalazł(eś/aś) coś, co wygląda jak bug serwera to koniecznie napisz
 Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostaniesz nagrodzon(y/a) rangą VIP!
 Warto, bo ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od "wagi" błędu, a znajdując kolejne błędy czasy te się kumulują!
 </p>
-2. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi deaphuz odpowiednią ilość "diaxów" (w treści darowizny dopisz "ranga VIP"):
-<ul style="list-style-type:none">
-<li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
-<li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
-<li>- 180, jeżeli chcesz otrzymać rangę na 3 miesiące</li>
-<li>- 300, jeżeli chcesz otrzymać rangę na czas trwania bieżącej edycji ("na zawsze")</li>
-</ul>
-</p>
-
 <p>
-3.
-Nagrywaj i streamuj z serwera! </p><p>
+  2. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem (Discord: deaphuz#9803).
+</p>
+<p>
+3.Nagrywaj i streamuj z serwera! </p>
+<p>
 Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas, który ustalicie.
 </p>
 <p>
   4. Kup odpowiednią usługę za pomocą komendy /sklep:
 <ul style="list-style-type:none">
+<li>- VIP1 (ranga na 1 dzień)</li>
 <li>- VIP3 (ranga na 3 dni)</li>
-<li>- VIP7 (ranga na 7 dni)</li>
+<li>- VIP14 (ranga na 14 dni)</li>
 <li>- VIP30 (ranga na 30 dni)</li>
-<li>- VIP45 (ranga na 45 dni)</li>
 </ul>
 </p>
-<p>5. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem.</p>
-<p>Kontakt z HeadAdminem przez Discorda: deaphuz#9803</p>
+
 
 <p style="margin: 64px"></p>
 <p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
