--- a/sv/index.html
+++ b/sv/index.html
@@ -80,7 +80,7 @@ background: linear-gradient(#00000000, #00000099);">
 ">
 <center>
    
-<img src="https://i.imgur.com/x0HtnBx.png" style="
+<img src="https://i.imgur.com/0lfwdWF.png" style="
   position: fixed;
   margin: auto;  
   width: 100%;
@@ -97,7 +97,6 @@ background: linear-gradient(#00000000, #00000099);">
 
 top: 20%;
    max-width: 500pt;
-  -webkit-animation:hue 15s linear infinite;
  ">
 </center>
 
