--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -77,7 +77,7 @@ z-index: 1;">
   font-size: 120%;
   text-align: justify;
   text-justify: inter-word;
-  width: 65%;
+  width: 70%;
   margin: 60px auto 0;
   padding-bottom: 24px;
   color: rgb(230, 230, 230);
@@ -93,7 +93,7 @@ z-index: 1;">
 
 <div class="main">
 
-<h1> Co daje ranga VIP? </h1>
+<h1> Co daje ranga VIP/Donator? </h1>
 <ul>
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
@@ -105,32 +105,31 @@ z-index: 1;">
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
 </ul>
  <p style="margin: 64px"></p>
-<h1> Jak zdobyć VIPa? </h1>
+<h1> Jak zdobyć VIPa/Donatora? </h1>
 <h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
 <p>
 1. Zgłaszaj bugi serwera!</p>
 <p>
 Jeżeli znalazł(eś/aś) coś, co wygląda jak bug serwera to koniecznie napisz o tym na kanale skargi-bledy na naszym serwerowym Discordzie!<br>
 Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostaniesz nagrodzon(y/a) rangą VIP!
-Warto, bo ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od "wagi" błędu, a znajdując kolejne błędy czasy te się kumulują!
+Ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od rozmiaru/znaczenia błędu.
 </p>
-<p>
-  2. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPala, możesz otrzymać VIPa na czas zależny od kwoty (miesiąc -> 4 zł). Pamiętaj, że nie jest to zakup rangi. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z HeadAdminem (Discord: deaphuz#9803).
-</p>
-<p>
-3.Nagrywaj i streamuj z serwera! </p>
-<p>
-Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas, który ustalicie.
-</p>
-<p>
-  4. Kup odpowiednią usługę za pomocą komendy /sklep:
-<ul style="list-style-type:none">
-<li>- VIP1 (ranga na 1 dzień)</li>
-<li>- VIP3 (ranga na 3 dni)</li>
-<li>- VIP14 (ranga na 14 dni)</li>
-<li>- VIP30 (ranga na 30 dni)</li>
+<p>2. Wesprzyj serwer!</p>
+Jeżeli wesprzesz serwer pieniężnie, możesz otrzymać rangę Donator na czas wg poniższego przelicznika:
+<ul>
+<li>6 zł/miesiąc - w przypadku PayPala</li>
+<li>7 zł/miesiąc - w przypadku PaySafeCard</li>
+<li>8 zł/miesiąc - w przypadku dowolnej metody z linku <a href="https://lvlup.pro/wallet/38610">https://lvlup.pro/wallet/38610</a></li>
 </ul>
+Aby wesprzeć serwer, skontaktuj się z deaphuzem przez Discorda: deaphuz#9803 lub na serwerze, gdy będzie online :)<br>
+W przypadku wsparcia metodą z linku będziesz musiał podać dokładną godzinę (z minutami), o której dokonał(eś/aś) operacji.
 </p>
+<p>3. Nagrywaj i streamuj z serwera! </p>
+<p>
+Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
+</p>
+<p>4. Kup odpowiednią usługę za pomocą komendy /sklep.</p>
+  
 
 
 <p style="margin: 64px"></p>
