--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -100,9 +100,11 @@ z-index: 1;">
 <li>dostęp do komend: /skull, /near, /suicide</li>
 <li>znosi opłaty za komendy: /lot, /lozko, /tpa, /tpaccept, /home</li>
 <li>dostęp do przenośnego workbencha (/wb) i enderchesta (/ec)</li>
-<li>18 sethome zamiast 3</li>
+<li>10 sethome zamiast 3</li>
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
+<li>możliwość zmiany nicka komendą /dchat nick</li>
+<li>możliwość zmiany biomu na działkach komendą /c biome</li>
 </ul>
  <p style="margin: 64px"></p>
 <h1> Jak zdobyć VIPa/Donatora? </h1>
