--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -21,6 +21,8 @@ z-index: -1;
 </div>
 
 <style>
+@font-face {font-family:"Minecraft Regular";src:url("1_Minecraft-Regular.eot?") format("eot"),url("1_Minecraft-Regular.woff") format("woff"),url("1_Minecraft-Regular.ttf") format("truetype"),url("1_Minecraft-Regular.svg#Minecraft-Regular") format("svg");font-weight:normal;font-style:normal;}
+
 a:link {
     color: rgb(200, 200, 200);
     text-decoration: underline;
@@ -75,6 +77,7 @@ z-index: 1;">
 .main {
   font-family: 'Open Sans', serif;
   font-size: 120%;
+  text-shadow: 2pt 2pt 3pt #000000;
   text-align: justify;
   text-justify: inter-word;
   width: 70%;
