--- a/sv/index.html
+++ b/sv/index.html
@@ -60,28 +60,28 @@ width: 100%;
 height: 100%;
 left: 0px;
 top: 0px;
-background-color: #000000d0;">
+background-color: #000000a0;">
 </div>
 
 <div style="
   color: white;
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
     font-family: arial;
      font-weight: bold;
        font-style: italic;
-       font-size: 500%;
+       font-size: 280%;
            z-index: 1;
-     text-shadow: 5px 5px #7f00ff;
+       line-height: 35pt;
+     text-shadow: 3px 3px 1px #7f00ff;
     ">
-6 lipca<br>
-16⁰⁰
+Survival<br>zdefiniowany<br>od nowa,<br>lepiej.
 </div>
 <div style="
-  color: #000000af;
+  color: #0000008f;
     position: absolute;
     top: 74%;
     left: 50%;
@@ -93,17 +93,17 @@ background-color: #000000d0;">
      font-weight: bold;
        font-style: italic;
            z-index: 2;
-       font-size: 250%;
+       font-size: 400%;
     } ">
 <div style="
-    margin-left: 2px;
+    margin-left: 1px;
           -webkit-animation:colorchange 20s infinite alternate;   
     "
-> Czekamy na ciebie
+> 4funsv.ml
 </div>
 <div style="
 margin-top: -4px;"
-> Czekamy na ciebie
+> 4funsv.ml
 </div>
 </div>
 <div style="
@@ -188,6 +188,7 @@ padding-top: 50.25%;">
     text-align: right;
     font-style: italic;  
     z-index: 3;
+    line-height: 25pt;
     margin-left: 10%;
     position: absolute;
     top: 40%;
