--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -100,13 +100,13 @@ z-index: 1;">
 <ul>
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
-<li>dostęp do komend: /skull, /near, /suicide</li>
-<li>znosi opłaty za komendy: /lot, /lozko, /tpa, /tpaccept, /home</li>
+<li>dostęp do komendy /skull</li>
+<li>znosi opłaty za komendy: /lot, /tpa, /tpaccept, /home</li>
 <li>dostęp do przenośnego workbencha (/wb) i enderchesta (/ec)</li>
 <li>10 sethome zamiast 3</li>
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
-<li>możliwość zmiany nicka komendą /dchat nick</li>
+<li>możliwość pokolorowania nicka komendą /dchat nick</li>
 <li>możliwość zmiany biomu na działkach komendą /c biome</li>
 </ul>
  <p style="margin: 64px"></p>
@@ -120,20 +120,19 @@ Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostanie
 Ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od rozmiaru/znaczenia błędu.
 </p>
 <p>2. Wesprzyj serwer!</p>
-Jeżeli wesprzesz serwer pieniężnie, możesz otrzymać rangę Donator na czas wg poniższego przelicznika:
+Jeżeli wesprzesz serwer pieniężnie, możesz otrzymać rangę Donator na czas wg przelicznika 8zł/miesiąc. dostepne metody:
 <ul>
-<li>6 zł/miesiąc - w przypadku PayPala</li>
-<li>7 zł/miesiąc - w przypadku PaySafeCard</li>
-<li>8 zł/miesiąc - w przypadku dowolnej metody z linku <a href="https://lvlup.pro/wallet/38610">https://lvlup.pro/wallet/38610</a></li>
+<li>8 zł/miesiąc - PayPal</li>
+<li>8 zł/miesiąc - PaySafeCard</li>
+<li>8 zł/miesiąc - dowolna z linku <a href="https://lvlup.pro/wallet/38610">https://lvlup.pro/wallet/38610</a></li>
 </ul>
-Aby wesprzeć serwer, skontaktuj się z deaphuzem przez Discorda: deaphuz#9803 lub na serwerze, gdy będzie online :)<br>
-W przypadku wsparcia metodą z linku będziesz musiał podać dokładną godzinę (z minutami), o której dokonał(eś/aś) operacji.
+Aby wesprzeć serwer, skontaktuj się z deaphuzem przez Discorda: deaphuz#9803 lub na serwerze, gdy będzie online.
 </p>
 <p>3. Nagrywaj i streamuj z serwera! </p>
 <p>
-Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
+Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń (absolutne minimum to 1000 subskrybcji) i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
 </p>
-<p>4. Kup odpowiednią usługę za pomocą komendy /sklep.</p>
+<p>4. Kup odpowiednią usługę za pomocą komendy /sklep. (tylko stara edycja)</p>
   
 
 
