--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -24,11 +24,11 @@ z-index: -1;
 @font-face {font-family:"Minecraft Regular";src:url("1_Minecraft-Regular.eot?") format("eot"),url("1_Minecraft-Regular.woff") format("woff"),url("1_Minecraft-Regular.ttf") format("truetype"),url("1_Minecraft-Regular.svg#Minecraft-Regular") format("svg");font-weight:normal;font-style:normal;}
 
 a:link {
-    color: rgb(200, 200, 200);
+    color: rgb(100, 100, 240);
     text-decoration: underline;
 }
 a:hover {
-    color: rgb(230, 230, 230);
+    color: rgb(150, 150, 250);
     text-decoration: none;
 }
 a:visited {
@@ -109,9 +109,18 @@ z-index: 1;">
 <li>możliwość pokolorowania nicka komendą /dchat nick</li>
 <li>możliwość zmiany biomu na działkach komendą /c biome</li>
 </ul>
+<h1> Co daje ranga SVIP? </h1>
+<h3>To wszystko co VIP oraz:</h3>
+<ul>
+<li>możliwość ZMIANY (!) nicka komendą /dchat nick</li>
+<li>40 sethome (zamiast 10 u VIPa i 3 u gracza)</li>
+</ul>
  <p style="margin: 64px"></p>
-<h1> Jak zdobyć VIPa/Donatora? </h1>
-<h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
+<h3>Aby zakupić rangę VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
+<h3>Aby zakupić rangę VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z HeadAdminem serwera.</h3>
+<h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, a cena SVIPa - 20zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
+<p></p>
+<h2> Alternatywne sposoby zdobycia rangi VIP/Donator:</h2>
 <p>
 1. Zgłaszaj bugi serwera!</p>
 <p>
@@ -120,19 +129,13 @@ Jeżeli to, co odkrył(eś/aś) okaże faktycznie okaże się bugiem to zostanie
 Ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności od rozmiaru/znaczenia błędu.
 </p>
 <p>2. Wesprzyj serwer!</p>
-Jeżeli wesprzesz serwer pieniężnie, możesz otrzymać rangę Donator na czas wg przelicznika 8zł/miesiąc. dostepne metody:
-<ul>
-<li>8 zł/miesiąc - PayPal</li>
-<li>8 zł/miesiąc - PaySafeCard</li>
-<li>8 zł/miesiąc - dowolna z linku <a href="https://lvlup.pro/wallet/38610">https://lvlup.pro/wallet/38610</a></li>
-</ul>
-Aby wesprzeć serwer, skontaktuj się z deaphuzem przez Discorda: deaphuz#9803 lub na serwerze, gdy będzie online.
+Jeżeli wesprzesz serwer pieniężnie (PayPal), możesz otrzymać rangę Donator na czas wg przelicznika 8zł/miesiąc.
+Aby to uczynić, skontaktuj się z HeadAdminem.
 </p>
 <p>3. Nagrywaj i streamuj z serwera! </p>
 <p>
-Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń (absolutne minimum to 1000 subskrybcji) i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
+Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń (<b>absolutne minimum</b> to 1000 subskrybcji) i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
 </p>
-<p>4. Kup odpowiednią usługę za pomocą komendy /sklep. (tylko stara edycja)</p>
   
 
 
