--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -115,10 +115,11 @@ z-index: 1;">
 <li>możliwość ZMIANY (!) nicka komendą /dchat nick</li>
 <li>40 sethome (zamiast 10 u VIPa i 3 u gracza)</li>
 </ul>
+<h3>Ranga GraczTP daje darmową teleportację i usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
  <p style="margin: 64px"></p>
-<h3>Aby zakupić rangę VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
-<h3>Aby zakupić rangę VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z HeadAdminem serwera.</h3>
-<h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, a cena SVIPa - 20zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
+<h3>Aby zakupić rangę GraczTP, VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
+<h3>Aby zakupić rangę GraczTP, VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z HeadAdminem serwera.</h3>
+<h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, cena rangi GraczTP - 2zł/miesiąc, a cena SVIPa - 20zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
 <p></p>
 <h2> Alternatywne sposoby zdobycia rangi VIP/Donator:</h2>
 <p>
