--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -101,7 +101,8 @@ z-index: 1;">
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie i na tabliczkach</li>
 <li>dostęp do komendy /skull</li>
-<li>znosi opłaty za komendy: /lot, /tpa, /tpaccept, /home</li>
+<li>znosi opłaty za komendę /lot</li>
+<li>usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji</li>
 <li>dostęp do przenośnego workbencha (/wb) i enderchesta (/ec)</li>
 <li>10 sethome zamiast 3</li>
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
@@ -115,7 +116,7 @@ z-index: 1;">
 <li>możliwość ZMIANY (!) nicka komendą /dchat nick</li>
 <li>40 sethome (zamiast 10 u VIPa i 3 u gracza)</li>
 </ul>
-<h3>Ranga GraczTP daje darmową teleportację i usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
+<h3>Ranga GraczTP usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
  <p style="margin: 64px"></p>
 <h3>Aby zakupić rangę GraczTP, VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
 <h3>Aby zakupić rangę GraczTP, VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z HeadAdminem serwera.</h3>
