--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -115,6 +115,7 @@ z-index: 1;">
 <ul>
 <li>możliwość ZMIANY (!) nicka komendą /dchat nick</li>
 <li>40 sethome (zamiast 10 u VIPa i 3 u gracza)</li>
+<li>10 miejsc na aukcjach /ca (zamiast 5 u VIPa i Gracza)</li>
 </ul>
 <h3>Ranga GraczTP usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
  <p style="margin: 64px"></p>
