--- a/sv/discord/index.html
+++ b/sv/discord/index.html
@@ -94,10 +94,10 @@ z-index: 1;">
 
 <widgetbot
   server="454012996172120066"
-  channel="498448495078932481"
+  channel="455786220622970893"
   width=100%
   height=94vh
-  shard="https://cl3.widgetbot.io"
+  shard="https://disweb.dashflo.net"
 >
 </widgetbot>
 <a align="center" href="https://discord.gg/qBnWd2F">Dołącz do Discorda</a>
