--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -120,8 +120,9 @@ z-index: 1;">
 <h3>Ranga GraczTP usuwa kilkuminutowy czas oczekiwania na kolejne użycie teleportacji.</h3>
  <p style="margin: 64px"></p>
 <h3>Aby zakupić rangę GraczTP, VIP lub SVIP SMSem, kliknij <a href="https://serwer1908450.home.pl/sklep">tutaj</a>.</h3>
-<h3>Aby zakupić rangę GraczTP, VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z HeadAdminem serwera.</h3>
+<h3>Aby zakupić rangę GraczTP, VIP lub SVIP innymi metodami (w tym PaySafeCard, blik, przelew i wiele więcej!), skontaktuj się z właścicielem serwera (deaphuz).</h3>
 <h4>Cena VIPa przy metodzie płatności innej niż SMS wynosi 8zł/miesiąc, cena rangi GraczTP - 2zł/miesiąc, a cena SVIPa - 16zł/miesiąc.<br>Rangę można kupić na dowolny okres czasu podany w dniach :)</h4>
+<p><a href="http://lvlup.pro/wallet/38610">Link do płatności</a></p>
 <p></p>
 <h2> Alternatywne sposoby zdobycia rangi VIP/Donator:</h2>
 <p>
@@ -133,11 +134,11 @@ Ranga zostaje przydzielona na czas od paru dni do nawet miesiąca w zależności
 </p>
 <p>2. Wesprzyj serwer!</p>
 Jeżeli wesprzesz serwer pieniężnie (PayPal), możesz otrzymać rangę Donator na czas wg przelicznika 8zł/miesiąc.
-Aby to uczynić, skontaktuj się z HeadAdminem.
+Aby to uczynić, skontaktuj się z właścicielem serwera (deaphuz).
 </p>
 <p>3. Nagrywaj i streamuj z serwera! </p>
 <p>
-Skontakuj się z HeadAdminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń (<b>absolutne minimum</b> to 1000 subskrybcji) i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
+Skontakuj się z adminem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń (<b>absolutne minimum</b> to 1000 subskrybcji) i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.<br>Rangę otrzymujesz na czas, który ustalicie.
 </p>
   
 
