--- a/sv/index.html
+++ b/sv/index.html
@@ -78,7 +78,7 @@ background-color: #000000a0;">
        line-height: 35pt;
      text-shadow: 3px 3px 1px #7f00ff;
     ">
-Survival<br>zdefiniowany<br>od nowa,<br>lepiej.
+Freebuild<br>do potęgi
 </div>
 <div style="
   color: #0000008f;
@@ -143,7 +143,7 @@ background: linear-gradient(#00000000, #00000099);">
 ">
 <center>
    
-<img src="https://i.imgur.com/0lfwdWF.png" style="
+<img src="https://i.imgur.com/FWafJmI.png" style="
   position: fixed;
   margin: auto;  
   width: 70%;
@@ -195,10 +195,9 @@ padding-top: 50.25%;">
     right: 16px;
 ">
 <a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</i></a><br>
-<a href=https://imgur.com/a/hTNfOV5>screeny</a><br>
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a><br>
 <a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>regulamin</a><br>
-<a href=https://dphz.github.io/sv/discord/>discord</a><br>
+<a href=https://discord.gg/qBnWd2F>discord</a><br>
 </div>
 
 </body>
